fix(Homepage): fix horizontal scroll bug

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -2,7 +2,7 @@
     display: inline-block;
     opacity: 0;
     animation: bounceIn;
-    animation-duration: 1s;
+    animation-duration: 1.5s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
     min-width: 10px;
