--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,6 +1,7 @@
 .home-page {
     overflow: hidden;
     .text-zone {
+        
         position: absolute;
         left: 10%;
         top: 50%;
@@ -42,9 +43,10 @@
     }
 
     h2 {
+        // overflow: hidden;
+        align-items: center;
         color: var(--textSecondary);
         margin-top: 20px;
-        margin-right: 20%;
         font-weight: 400;
         font-size: 11px;
         font-family: sans-serif;
@@ -119,8 +121,8 @@
 
     .image-wrapper {
         position: relative;
-        width: 380px;
-        height: 380px;
+        width: 100%;
+        height: 100%;
         border-radius: 50%;
         overflow: hidden;
         border: 4px solid var(--primary);
@@ -251,13 +253,14 @@
     }
 
     .home-page {
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-top: 60px;
 
         .text-zone {
-            position: relative;
+            position: initial;
             width: 100%;
             transform: none;
             padding: 10px 20px;
@@ -275,8 +278,8 @@
 
     .picture-container {
         position: relative;
-        width: 350px;
-        height: 350px;
+        width: 60%;
+        height: 60%;
         top: auto;
         right: auto;
         left: auto;
@@ -285,8 +288,8 @@
         order: 2;
 
         .image-wrapper {
-            width: 320px;
-            height: 320px;
+            width: 100%;
+            height: 100%;
         }
     }
 }
@@ -299,6 +302,7 @@
     }
 
     .home-page {
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
